--- a/Final/views/tpo/application_details.ejs
+++ b/Final/views/tpo/application_details.ejs
@@ -11,8 +11,7 @@
     <meta name="author" content="">
     <!-- Favicon icon -->
     <title>TPO</title>
-    
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="canonical" href="https://www.wrappixel.com/templates/xtremeadmin/" />
     <link href="stylesheets/chartist.min.css" rel="stylesheet">
     <link href="stylesheets/chartist-init.css" rel="stylesheet">
@@ -30,6 +29,32 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <style>
+@import url("https://cdc.iitpkd.ac.in/modules/system/system.base.css?ptfsz0");
+</style>
+<style>
+@import url("https://cdc.iitpkd.ac.in/sites/all/modules/calendar/css/calendar_multiday.css?ptfsz0");
+@import url("https://cdc.iitpkd.ac.in/sites/all/modules/date/date_api/date.css?ptfsz0");
+@import url("https://cdc.iitpkd.ac.in/sites/all/modules/date/date_popup/themes/datepicker.1.7.css?ptfsz0");
+@import url("https://cdc.iitpkd.ac.in/modules/field/theme/field.css?ptfsz0");
+@import url("https://cdc.iitpkd.ac.in/modules/node/node.css?ptfsz0");
+@import url("https://cdc.iitpkd.ac.in/sites/all/modules/views/css/views.css?ptfsz0");
+@import url("https://cdc.iitpkd.ac.in/sites/all/modules/ckeditor/css/ckeditor.css?ptfsz0");
+</style>
+<style>
+@import url("https://cdc.iitpkd.ac.in/sites/all/modules/ctools/css/ctools.css?ptfsz0");
+@import url("https://cdc.iitpkd.ac.in/sites/all/modules/field_collection/field_collection.theme.css?ptfsz0");
+</style>
+<link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/bootswatch/3.3.7/sandstone/bootstrap.css" media="all" />
+<style>
+@import url("https://cdc.iitpkd.ac.in/sites/all/themes/bootstrap/css/3.3.7/overrides-sandstone.min.css?ptfsz0");
+@import url("https://cdc.iitpkd.ac.in/sites/all/themes/internship/css/style.css?ptfsz0");
+</style>
+<style media="print">
+@import url("https://cdc.iitpkd.ac.in/sites/all/themes/internship/css/print.css?ptfsz0");
+</style>
 
 <style>
         .tpo-form {
@@ -166,7 +191,7 @@
         </style>
 </head>
 
-<body>
+<body class="html not-front logged-in one-sidebar sidebar-first page-node page-node- page-node-12292 node-type-internship role-authenticated-user role-unverified-student role-Non-final-year-student role-CV-creator role-Student-with-CV">
     <!-- ============================================================== -->
     <!-- Preloader - style you can find in spinners.css -->
     <!-- ============================================================== -->
@@ -203,10 +228,12 @@
                         </b>
                         <!--End Logo icon -->
                         <!-- Logo text -->
-                        <!-- <span class="logo-text">
+                        <span class="logo-text">
+                            <!-- dark Logo text -->
                             <img src="img/logo1.png" alt="homepage" class="dark-logo" />
+                            <!-- Light Logo text -->
                             <img src="img/logo1.png" class="light-logo" alt="homepage" />
-                        </span> -->
+                        </span>
                     </a>
                     <!-- ============================================================== -->
                     <!-- End Logo -->
@@ -440,7 +467,7 @@
                                     </a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a href="/company_details" class="sidebar-link">
+                                    <a href="index.html" class="sidebar-link">
                                         <span class="hide-menu"> Company Details </span>
                                     </a>
                                 </li>
@@ -482,51 +509,96 @@
         <!-- ============================================================== -->
         <!-- Page wrapper  -->
         <!-- ============================================================== -->
+        <div class="page-wrapper">
+            <!-- ============================================================== -->
+                <!-- Bread crumb and right sidebar toggle -->
+                <!-- ============================================================== -->
+                <div class="row page-titles">
+                    <div class="col-md-5 col-12 align-self-center">
+                        <h3 class="text-themecolor mb-0">Training and Placement Officer</h3>
+                    </div>
+                   
+                <!-- ============================================================== -->
+                <!-- End Bread crumb and right sidebar toggle -->
+                <!-- ============================================================== -->
+            <!-- ============================================================== -->
+            <!-- Container fluid  -->
+            <!-- ============================================================== -->
+           
+            <!-- ============================================================== -->
+            <!-- End Container fluid  -->
+            <!-- ============================================================== -->
+            <!-- ============================================================== -->
+            <!-- footer -->
+            <!-- ============================================================== -->
+            <!-- ============================================================== -->
+            <!-- End footer -->
+            <!-- ============================================================== -->
+        </div>
+        <!-- ============================================================== -->
+        <!-- End Page wrapper  -->
+        <!-- ============================================================== -->
+    </div>
     <!-- ============================================================== -->
     <!-- End Wrapper -->
     <!-- ============================================================== -->
     <!-- ============================================================== -->
     <!-- customizer Panel -->
     <!-- ============================================================== -->
-     <!-- <div class="tpo-form">
-        <h1>Search detail</h1>
-        <form name="tpoform" action="/tpoSearch" method="POST">
-            <input type="text" name="ID" placeholder="ID" required>
-            <select id="usertype" name = "usertype">
-                <option value="student" selected="selected">Student</option>
-                <option value="studentrep">Student Rep</option>
-                <option value="staff">Staff Rep</option>
-                <option value="company">Company</option>
-            </select><br><br>
-            <input type="submit" value="search">
-        </form>
-    </div> -->
+    
+<section class="col-sm-9" style="margin-left: 250px;">
+                  <a id="main-content"></a>
+                    <h1><%= application[0].profile_name %></h1>
+                    <hr style="color: #1e88e5; background-color: #1e88e5; border: none; height: 4px;">
+                                                        
+        <div class="region region-content">
+    <section id="block-views-company-overview-block-block-1" class="block block-views clearfix">
 
-<div class="wrapper">
-  <ul class="menu">
-      <div class="head">Companies</div> 
-  <ul>
-    <% for(let i=0;i<=companies.length-1;i++) {%>
-    <li>
-      <div class="info">
-        <a href=<%= "/company/" + companies[i].company_id %>>
-            <h3 style="display: inline-block;">
-                <%= companies[i].name%>                    
-            </h3>
-            <h1 class="float-right" style="margin-top: 15px; margin-right: 15px; font-size: 25px">
-                <%= companies[i].num_verified %>/<%= companies[i].total %>                    
-            </h1>
-        </a>
-     </div>
-    </li>
-    <% } %>
-    </ul>
-  </ul>
+      
+  <div class="view view-company-overview-block view-id-company_overview_block view-display-id-block_1 view-dom-id-49d12bc0fd213468d0c592816599910a">
+        
+  
+  
+      <div class="view-content">
+        <div class="views-row views-row-1 views-row-odd views-row-first views-row-last">
+      
+  <div class="views-field views-field-field-company-name">    <span class="views-label views-label-field-company-name">Posted by: </span>    <div class="field-content"><%= application[0].name %></div>  </div>  
+  <div class="views-field views-field-field-company-overview">    <span class="views-label views-label-field-company-overview">Company Overview: </span>    <div class="field-content"><%= application[0].company_overview %></div>  </div>  </div>
+    </div>
+  
+  
+  
+  
+  
+  
 </div>
+</section>
+<section id="block-system-main" class="block block-system clearfix">
+
+      
+  <article id="node-12292" class="node node-internship clearfix">
+    <div class="field field-name-field-vacancies field-type-number-integer field-label-above"><div class="field-label">Number of Vacancies:&nbsp;</div><div class="field-items"><div class="field-item even"><%= application[0].vacancies %></div></div></div><div class="field field-name-field-stipend field-type-number-integer field-label-above"><div class="field-label">Stipend:&nbsp;</div><div class="field-items"><div class="field-item even"><%= application[0].stipend %> per month</div></div></div><div class="field field-name-field-branch-eligibility field-type-taxonomy-term-reference field-label-above"><div class="field-label">Eligible Disciplines:&nbsp;</div><div class="field-items"><div class="field-item even"><%= application[0].eligible_disciplines %></div></div></div><div class="field field-name-field-skills-required field-type-text-long field-label-above"><div class="field-label">Skills Required:&nbsp;</div><div class="field-items"><div class="field-item even"><%= application[0].required_skills %></div></div></div><div class="field field-name-field-additional-info field-type-text-long field-label-above"><div class="field-label">Additional Information:&nbsp;</div><div class="field-items"><div class="field-item even"><%= application[0].additional_info %></div></div></div><div class="field-collection-container clearfix"><div class="field field-name-field-selection-procedure field-type-field-collection field-label-above"><div class="field-label">Selection Procedure:&nbsp;</div><div class="field-items"><div class="field-item even"><div class="field-collection-view clearfix view-mode-token field-collection-view-final"><div class="entity entity-field-collection-item field-collection-item-field-selection-procedure clearfix">
+  <div class="content">
+    <div class="field field-name-field-based-on-resume field-type-list-boolean field-label-hidden"><div class="field-items"><div class="field-item even"><%= application[0].selection_procedure %></div></div></div>
+</div>
+</div></div></div></div></div><div class="field field-name-field-location field-type-text field-label-above"><div class="field-label">Location:&nbsp;</div><div class="field-items"><div class="field-item even"><%= application[0].location %></div></div></div><div class="field field-name-field-internship-details field-type-text-long field-label-above"><div class="field-label">Internship Details:&nbsp;</div><div class="field-items"><div class="field-item even"><%= application[0].intern_details %></div></div></div><div class="field field-name-field-internship-start-date field-type-datetime field-label-above"><div class="field-label">Tentative Internship Start Date and End Date:&nbsp;</div><div class="field-items"><div class="field-item even"><span class="date-display-range"><span class="date-display-start"><%= application[0].start_date %></span> to <span class="date-display-end"><%= application[0].end_date %></span></span></div></div></div><div class="field field-name-field-eligibility-year field-type-list-text field-label-above"><div class="field-label">Eligibility:&nbsp;</div><div class="field-items"><div class="field-item even"><%= application[0].eligibility %></div></div></div><div class="field field-name-field-last-date field-type-datetime field-label-above"><div class="field-label">Last date to apply:&nbsp;</div><div class="field-items"><div class="field-item even"><span class="date-display-single"><%= application[0].deadline %></span></div></div></div>    </article>
+
+</section>
+  </div>
+      <br><br>
+    <% if(application[0].verified==0){ %>
+        <a href=<%= "/verify/" + application[0].application_id %> class="btn" style="color: white; font-size: 15px; background-color: #1e88e5">
+            Verify
+        </a>
+    <% } %>
+
+<br><br>
+
+    </section>
 
 
 
-            
+
     <div class="chat-windows"></div>
     <!-- ============================================================== -->
     <!-- All Jquery -->
