student,/rep page updated

--- a/Final/views/tpo/comp.ejs
+++ b/Final/views/tpo/comp.ejs
@@ -441,7 +441,7 @@
                                     </a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a href="index.html" class="sidebar-link">
+                                    <a href="/company_details" class="sidebar-link">
                                         <span class="hide-menu"> Company Details </span>
                                     </a>
                                 </li>
