--- a/Final/views/student/profile_updated.ejs
+++ b/Final/views/student/profile_updated.ejs
@@ -258,7 +258,7 @@
                                             <a href="javascript:void(0)" class="message-item d-flex align-items-center border-bottom px-3 py-2">
                                                 <span class="btn btn-danger rounded-circle btn-circle"><i class="fa fa-link"></i></span>
                                                 <div class="w-75 d-inline-block v-middle pl-2">
-                                                    <h5 class="message-title mb-0 mt-1">Luanch Admin</h5> <span class="font-12 text-nowrap d-block text-muted text-truncate">Just see the my new admin!</span> <span class="font-12 text-nowrap d-block text-muted">9:30 AM</span> </div>
+                                                    <h5 class="message-title mb-0 mt-1">Launch Admin</h5> <span class="font-12 text-nowrap d-block text-muted text-truncate">Just see the my new admin!</span> <span class="font-12 text-nowrap d-block text-muted">9:30 AM</span> </div>
                                             </a>
                                             <!-- Message -->
                                             <a href="javascript:void(0)" class="message-item d-flex align-items-center border-bottom px-3 py-2">
@@ -354,7 +354,7 @@
                                     <li>
                                         <div class="dw-user-box p-3 d-flex">
                                             <div class="u-text ml-2">
-                                                <h4 class="mb-0">Steave Jobs</h4>
+                                                <h4 class="mb-0">Steve Jobs</h4>
                                                 <p class="text-muted mb-1 font-14"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="087e697a7d66486f65696164266b6765">[email&#160;protected]</a></p>
                                                 <a href="pages-profile.html" class="btn btn-rounded btn-danger btn-sm text-white d-inline-block">View
                                                     Profile</a>
@@ -429,27 +429,27 @@
 
                             <ul>
                                 <li class="sidebar-item">
-                                    <a href="/student" class="sidebar-link">
+                                    <a href="/profile_updated" class="sidebar-link">
                                         <span class="hide-menu"> Profile </span>
                                     </a>
                                 </li>
                                  <li class="sidebar-item">
-                                    <a href="/resume" class="sidebar-link">
+                                    <a href="/stud_resume" class="sidebar-link">
                                         <span class="hide-menu"> Resume </span>
                                     </a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a href="/applications" class="sidebar-link">
+                                    <a href="/stud_applications" class="sidebar-link">
                                         <span class="hide-menu"> Applications </span>
                                     </a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a href="/companies" class="sidebar-link">
+                                    <a href="/stud_companies_view" class="sidebar-link">
                                         <span class="hide-menu"> Company</span>
                                     </a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a href="/messages" class="sidebar-link">
+                                    <a href="/stud_messages" class="sidebar-link">
                                         <span class="hide-menu"> Messages</span>
                                     </a>
                                 </li>
@@ -487,7 +487,7 @@
                 <!-- ============================================================== -->
                 <div class="row page-titles">
                     <div class="col-md-5 col-12 align-self-center">
-                        <h3 class="text-themecolor mb-0">Training and Placement Officer</h3>
+                        <h3 class="text-themecolor mb-0">Student Name</h3>
                         <ol class="breadcrumb mb-0 p-0 bg-transparent">
                             <li class="breadcrumb-item"><a href="javascript:void(0)">Update profile</a></li>
                         </ol>
@@ -547,7 +547,7 @@
                     <div class="profile-head">
 
                                 <h4>
-                                    Training and Placement Officer(student)
+                                    Student Name (student)
                                 </h4>
                     </div>
                 </div>
