--- a/Final/views/student/stud_messages.ejs
+++ b/Final/views/student/stud_messages.ejs
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Favicon icon -->
-    <title>TPO</title>
+    <title>student</title>
 
 
     <link rel="canonical" href="https://www.wrappixel.com/templates/xtremeadmin/" />
@@ -32,26 +32,26 @@
 <![endif]-->
 
 <style>
-        .tpo-form {
+        .student-form {
             width: 300px;
             margin: 0 auto;
             font-family: Tahoma, Geneva, sans-serif;
         }
-        .tpo-form h1 {
+        .student-form h1 {
             text-align: center;
             color: #4d4d4d;
             font-size: 24px;
             padding: 20px 0 20px 0;
         }
-        .tpo-form input[type="password"],
-        .tpo-form input[type="text"] {
+        .student-form input[type="password"],
+        .student-form input[type="text"] {
             width: 100%;
             padding: 15px;
             border: 1px solid #dddddd;
             margin-bottom: 15px;
             box-sizing:border-box;
         }
-        .tpo-form input[type="submit"] {
+        .student-form input[type="submit"] {
             width: 100%;
             padding: 15px;
             background-color: #535b63;
@@ -61,7 +61,7 @@
             font-weight: bold;
             color: #ffffff;
         }
-        .tpo-form select {
+        .student-form select {
             width: 100%;
             padding: 15px;
             border: 1px solid #dddddd;
@@ -355,7 +355,7 @@
                                     <li>
                                         <div class="dw-user-box p-3 d-flex">
                                             <div class="u-text ml-2">
-                                                <h4 class="mb-0">Steave Jobs</h4>
+                                                <h4 class="mb-0">Steve Jobs</h4>
                                                 <p class="text-muted mb-1 font-14"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="087e697a7d66486f65696164266b6765">[email&#160;protected]</a></p>
                                                 <a href="pages-profile.html" class="btn btn-rounded btn-danger btn-sm text-white d-inline-block">View
                                                     Profile</a>
@@ -404,7 +404,7 @@
                     <!-- User profile image -->
                     <!-- User profile text-->
                     <div class="profile-text pt-1">
-                        <a href="#" class="dropdown-toggle u-dropdown w-100 text-white d-block position-relative" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">TPO</a>
+                        <a href="#" class="dropdown-toggle u-dropdown w-100 text-white d-block position-relative" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">student</a>
                         <div class="dropdown-menu animated flipInY">
                             <a href="#" class="dropdown-item"><i class="ti-user"></i>
                                 My Profile</a>
@@ -430,28 +430,28 @@
 
                             <ul>
                                 <li class="sidebar-item">
-                                    <a href="/tpo" class="sidebar-link">
+                                    <a href="/profile_updated" class="sidebar-link">
                                         <span class="hide-menu"> Profile </span>
                                     </a>
                                 </li>
                                  <li class="sidebar-item">
-                                    <a href="/student_details" class="sidebar-link">
-                                        <span class="hide-menu"> Student Details </span>
+                                    <a href="/stud_resume" class="sidebar-link">
+                                        <span class="hide-menu"> Resume </span>
                                     </a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a href="/company_details" class="sidebar-link">
-                                        <span class="hide-menu"> Company Details </span>
+                                    <a href="/stud_applications" class="sidebar-link">
+                                        <span class="hide-menu"> Applications </span>
                                     </a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a href="/assign_stud_rep" class="sidebar-link">
-                                        <span class="hide-menu"> Assign Stud Rep</span>
+                                    <a href="/stud_companies_view" class="sidebar-link">
+                                        <span class="hide-menu"> Company</span>
                                     </a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a href="index3.html" class="sidebar-link">
-                                        <span class="hide-menu"> Account Details</span>
+                                    <a href="/stud_messages" class="sidebar-link">
+                                        <span class="hide-menu"> Messages</span>
                                     </a>
                                 </li>
                             </ul>
@@ -488,9 +488,9 @@
     <!-- ============================================================== -->
     <!-- customizer Panel -->
     <!-- ============================================================== -->
-     <!-- <div class="tpo-form">
+     <!-- <div class="student-form">
         <h1>Search detail</h1>
-        <form name="tpoform" action="/tpoSearch" method="POST">
+        <form name="studentform" action="/studentSearch" method="POST">
             <input type="text" name="ID" placeholder="ID" required>
             <select id="usertype" name = "usertype">
                 <option value="student" selected="selected">Student</option>
@@ -502,27 +502,7 @@
         </form>
     </div> -->
 
-<div class="wrapper">
-  <ul class="menu">
-      <div class="head">Companies</div>
-  <ul>
-    <% for(let i=0;i<=companies.length-1;i++) {%>
-    <li>
-      <div class="info">
-        <a href=<%= "/company/" + companies[i].company_id %>>
-            <h3 style="display: inline-block;">
-                <%= companies[i].name%>
-            </h3>
-            <h1 class="float-right" style="margin-top: 15px; margin-right: 15px; font-size: 25px">
-                <%= companies[i].num_verified %>/<%= companies[i].total %>
-            </h1>
-        </a>
-     </div>
-    </li>
-    <% } %>
-    </ul>
-  </ul>
-</div>
+
 
 
 
