--- a/Final/views/student_rep/profile.ejs
+++ b/Final/views/student_rep/profile.ejs
@@ -10,9 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Favicon icon -->
-    <title>TPO</title>
-
-
+    <title>Student Representative</title>
     <link rel="canonical" href="https://www.wrappixel.com/templates/xtremeadmin/" />
     <link href="stylesheets/chartist.min.css" rel="stylesheet">
     <link href="stylesheets/chartist-init.css" rel="stylesheet">
@@ -23,7 +21,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Custom CSS -->
     <link href="stylesheets/style.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="stylesheets/companies_list.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -203,10 +200,12 @@
                         </b>
                         <!--End Logo icon -->
                         <!-- Logo text -->
-                        <!-- <span class="logo-text">
+                        <span class="logo-text">
+                            <!-- dark Logo text -->
                             <img src="img/logo1.png" alt="homepage" class="dark-logo" />
+                            <!-- Light Logo text -->
                             <img src="img/logo1.png" class="light-logo" alt="homepage" />
-                        </span> -->
+                        </span>
                     </a>
                     <!-- ============================================================== -->
                     <!-- End Logo -->
@@ -403,17 +402,17 @@
                 <div class="user-profile position-relative" style="background: url(../assets/images/background/user-info.jpg) no-repeat;">
                     <!-- User profile image -->
                     <!-- User profile text-->
-                    <div class="profile-text pt-1">
+                    <div class="profile-text pt-1"> 
                         <a href="#" class="dropdown-toggle u-dropdown w-100 text-white d-block position-relative" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">TPO</a>
-                        <div class="dropdown-menu animated flipInY">
+                        <div class="dropdown-menu animated flipInY"> 
                             <a href="#" class="dropdown-item"><i class="ti-user"></i>
-                                My Profile</a>
+                                My Profile</a> 
                             <a href="#" class="dropdown-item"><i class="ti-wallet"></i> My
                                 Balance</a>
                             <a href="#" class="dropdown-item"><i class="ti-email"></i> Inbox</a>
-                            <div class="dropdown-divider"></div>
+                            <div class="dropdown-divider"></div> 
                             <a href="#" class="dropdown-item"><i class="ti-settings"></i> Account Setting</a>
-                            <div class="dropdown-divider"></div>
+                            <div class="dropdown-divider"></div> 
                             <a href="authentication-login1.html" class="dropdown-item"><i class="fa fa-power-off"></i> Logout</a>
                         </div>
                     </div>
@@ -427,36 +426,21 @@
                             <span class="hide-menu">Personal</span>
                         </li>
                         <li class="sidebar-item">
-
+                            
                             <ul>
                                 <li class="sidebar-item">
-                                    <a href="/tpo" class="sidebar-link">
-                                        <span class="hide-menu"> Profile </span>
+                                    <a href="/student_rep" class="sidebar-link">
+                                        <span class="hide-menu"> Verifiy Students</span>
                                     </a>
                                 </li>
                                  <li class="sidebar-item">
-                                    <a href="/student_details" class="sidebar-link">
-                                        <span class="hide-menu"> Student Details </span>
-                                    </a>
-                                </li>
-                                <li class="sidebar-item">
-                                    <a href="/company_details" class="sidebar-link">
-                                        <span class="hide-menu"> Company Details </span>
-                                    </a>
-                                </li>
-                                <li class="sidebar-item">
-                                    <a href="/assign_stud_rep" class="sidebar-link">
-                                        <span class="hide-menu"> Assign Stud Rep</span>
-                                    </a>
-                                </li>
-                                <li class="sidebar-item">
-                                    <a href="index3.html" class="sidebar-link">
-                                        <span class="hide-menu"> Account Details</span>
+                                    <a href="/studentRepPass" class="sidebar-link">
+                                        <span class="hide-menu"> Change Password</span>
                                     </a>
                                 </li>
                             </ul>
                         </li>
-
+                       
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link"
                                 href="authentication-login1.html" aria-expanded="false"><i
                                     class="mdi mdi-directions"></i><span class="hide-menu">Log Out</span></a></li>
@@ -482,6 +466,36 @@
         <!-- ============================================================== -->
         <!-- Page wrapper  -->
         <!-- ============================================================== -->
+        <div class="page-wrapper">
+            <!-- ============================================================== -->
+                <!-- Bread crumb and right sidebar toggle -->
+                <!-- ============================================================== -->
+                <div class="row page-titles">
+                    <div class="col-md-5 col-12 align-self-center">
+                        <h3 class="text-themecolor mb-0">Student Representative</h3>
+                    </div>
+                   
+                <!-- ============================================================== -->
+                <!-- End Bread crumb and right sidebar toggle -->
+                <!-- ============================================================== -->
+            <!-- ============================================================== -->
+            <!-- Container fluid  -->
+            <!-- ============================================================== -->
+           
+            <!-- ============================================================== -->
+            <!-- End Container fluid  -->
+            <!-- ============================================================== -->
+            <!-- ============================================================== -->
+            <!-- footer -->
+            <!-- ============================================================== -->
+            <!-- ============================================================== -->
+            <!-- End footer -->
+            <!-- ============================================================== -->
+        </div>
+        <!-- ============================================================== -->
+        <!-- End Page wrapper  -->
+        <!-- ============================================================== -->
+    </div>
     <!-- ============================================================== -->
     <!-- End Wrapper -->
     <!-- ============================================================== -->
@@ -501,33 +515,13 @@
             <input type="submit" value="search">
         </form>
     </div> -->
-
-<div class="wrapper">
-  <ul class="menu">
-      <div class="head">Companies</div>
-  <ul>
-    <% for(let i=0;i<=companies.length-1;i++) {%>
-    <li>
-      <div class="info">
-        <a href=<%= "/company/" + companies[i].company_id %>>
-            <h3 style="display: inline-block;">
-                <%= companies[i].name%>
-            </h3>
-            <h1 class="float-right" style="margin-top: 15px; margin-right: 15px; font-size: 25px">
-                <%= companies[i].num_verified %>/<%= companies[i].total %>
-            </h1>
-        </a>
-     </div>
-    </li>
-    <% } %>
-    </ul>
-  </ul>
-</div>
-
-
-
-
-    <div class="chat-windows"></div>
+   <div class="tpo-form">
+        <h1>Verify Students</h1>
+        <form name="tpoform" action="/verify_student" method="POST">
+            <input type="text" name="username" placeholder="Student ID" required>
+            <input type="submit" value="search">
+        </form>
+    </div>
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
